K8s/module-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module-api
  labels:
    app: module-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: module-api
  template:
    metadata:
      labels:
        app: module-api
    spec:
      containers:
        - name: module-api
          image: qunboo/module-api:1.0-SNAPSHOT
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: module-api-service
spec:
  selector:
    app: module-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
