K8s/module-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: module-app
  labels:
    app: module-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: module-app
  template:
    metadata:
      labels:
        app: module-app
    spec:
      containers:
        - name: module-app
          image: qunboo/module-app:1.0-SNAPSHOT
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: module-app-service
spec:
  selector:
    app: module-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
